# cargo-test-all

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  command.rs  error.rs  lib.rs  main.rs  util.rs  utils.rs  worker.rs
src/runners/: cratesio.rs  git.rs  local.rs  mod.rs  traits.rs
