[package]
name = "cargo-test-all"
version = "0.1.2"
authors = ["Valeryi Savich <relrin78@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
description = "Cargo extension for running tests of the used dependencies"
homepage = "https://github.com/Relrin/cargo-test-all"
repository = "https://github.com/Relrin/cargo-test-all"
keywords = ["cargo", "cargo-commands", "cargo-subcommand", "testing"]

[dependencies]
cargo = "0.42.0"
cargo-clone = "0.1.4"
failure = "0.1.6"
rm_rf = "0.5.1"
rustc-serialize = "0.3.24"
structopt = "0.3.9"
structopt-derive = "0.4.2"
toml = "0.5.6"
workerpool = "1.2.0"