[package]
name = "cargo-test-all"
version = "0.2.0"
authors = ["Valeryi Savich <relrin78@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
description = "Cargo extension for running tests of the used dependencies"
homepage = "https://github.com/Relrin/cargo-test-all"
repository = "https://github.com/Relrin/cargo-test-all"
keywords = ["cargo", "cargo-commands", "cargo-subcommand", "testing"]

[dependencies]
cargo = "0.61.1"
cargo-clone = "1.0.1"
failure = "0.1.8"
rm_rf = "0.6.1"
rustc-serialize = "0.3.24"
structopt = "0.3.25"
structopt-derive = "0.4.18"
toml = "0.5.8"
workerpool = "1.2.0"